fix: missing navbar hamburger icon on mobile

--- a/app.css
+++ b/app.css
@@ -1,6 +1,5 @@
 /* Start of Navbar CSS */
 .navbar {
-    background-color: rgba(34, 34, 34, 0);
     padding: 0;
 }
 #mainNavbar .navbar-brand {
